--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -74,3 +74,73 @@ html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
 
 
+/* ------------  start here --------------- */
+
+#site-header {
+	width:445;
+	height:95;
+}
+
+#body {
+	background-color: white;
+	width:900px;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+#nav {
+	font-family:Serif;
+	font-weight:bold;
+	width: 550px;
+	height: 35px;
+	font-size: 16px;
+	text-align: center;
+	border-radius: 2px;
+}
+
+#nav ul {
+	height: auto;
+    padding: 8px 0px;
+    margin: 0px;	
+}
+
+#nav li {
+	display: inline; 
+	padding: 20px; 
+	text-align:center;
+}
+
+#hr {
+	size:5;
+	color:black;
+	background-color:black;
+	height: 5px;
+}
+
+#article1 {
+	width: 400px;
+	padding: 10px; 
+	float:left;
+}
+
+#images/stoned-dog.jpg {
+	width: 400px;
+}
+
+#article2 {
+	width: 400px;
+	padding: 10px; 
+	float:left;
+}
+
+
+
+
+
+
+
+
+
+
+
+
