--- a/final/Portfolio.css
+++ b/final/Portfolio.css
@@ -175,6 +175,72 @@ body h1{
 	height:auto;
 	padding: 2.5% 0 2.5% 0;
 }
+
+.Resume-img{
+	width:100%;
+	height:auto;
+	padding: 2.5% 0 2.5% 0;
+}
+
+.BT-img {
+	width:100%;
+	height:auto;
+	padding: 2.5% 0 2.5% 0;
+}
+
+.FM-img {
+	width:90%;
+	height:auto;
+	padding: 2.5% 0 2.5% 0;
+}
+
+.Allure-img{
+	width:100%;
+	height:auto;
+	padding: 2.5% 0 2.5% 0;
+}
+
+.Train-img	{
+	width:100%;
+	height:auto;
+	padding: 2.5% 0 2.5% 0;
+}
+	
+.design-img	{
+	width:30%;
+	height:auto;
+	padding:.5%
+}
+
+.leftovers-img{
+	width:100%;
+	height:auto;
+	padding: 2.5% 0 2.5% 0;
+}
+
+.comparison-img{
+	width:100%;
+	height:auto;
+	padding: 2.5% 0 2.5% 0;
+}
+
+.Lettercropping-img{
+	width:100%;
+	height:auto;
+	padding: 2.5% 0 2.5% 0;
+}
+
+img.color_flip {
+      filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
+      filter: gray; /* IE5+ */
+      -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */
+      -webkit-transition: all .5s ease-in-out;
+    }
+img.color_flip:hover {
+      filter: none;
+      -webkit-filter: grayscale(0);
+      -webkit-transform: scale(1.1);
+    }
 	
 #body-text{
 	font-family:Open Sans; helvetica; Sans-serif;
@@ -187,6 +253,10 @@ body h1{
 	height:auto;
 }
 
+#small-caps{
+	text-transform: uppercase;
+	font-size: 11px;
+}
 /* ---footer--- */
 
 
