--- a/final/Portfolio.css
+++ b/final/Portfolio.css
@@ -114,7 +114,7 @@ body {
 #name {
 	margin-top: 50px;
 	margin-bottom: 25px;
-	font-family:Open Sans; helvetica; Sans-serif;
+	font-family:Open Sans; Helvetica; Sans-serif;
 	font-weight:600;
 	font-size: 30px;
 	display: inline-block;
@@ -130,7 +130,7 @@ nav{
 }
 
 li{
-	font-family:Open Sans; helvetica; Sans-serif;
+	font-family:Open Sans; Helvetica; Sans-serif;
 	text-transform: uppercase;
 	padding:2px 25px 2px 25px;
 	font-weight:600px;
@@ -164,7 +164,7 @@ li a:hover {
 
 
 body h1{
-	font-family:Open Sans; helvetica; Sans-serif;
+	font-family:Open Sans; Helvetica; Sans-serif;
 	text-transform: uppercase;
 	font-weight:600;
 	display: inline-block;	
@@ -243,7 +243,7 @@ img.color_flip:hover {
     }
 	
 #body-text{
-	font-family:Open Sans; helvetica; Sans-serif;
+	font-family:Open Sans; Helvetica; Sans-serif;
 	font-size:12px;
 	line-height: 1.5em;
 	font-weight:400;
@@ -266,7 +266,7 @@ footer{
 }
 
 #footer-text{
-	font-family:Open Sans; helvetica; Sans-serif;
+	font-family:Open Sans; Helvetica; Sans-serif;
 	font-weight:400;
 	color:white;
 	line-height: 1.75em;
@@ -290,7 +290,7 @@ footer img {
 }
 
 #copyright {
-	font-family:Open Sans; helvetica; Sans-serif;
+	font-family:Open Sans; Helvetica; Sans-serif;
 	font-weight:400;
 	color:white;
 	line-height: 1.5em;
