--- a/final/Portfolio.css
+++ b/final/Portfolio.css
@@ -97,7 +97,8 @@ body {
 	top:0;
 	left:0;
 	width:100%;
-	background-color:rgba(255,255,255,.95);
+	background-color:rgb(255,255,255);
+	z-index:100;
 }
 
 #stickyNav{
