--- a/final/Portfolio.css
+++ b/final/Portfolio.css
@@ -97,7 +97,7 @@ body {
 	top:0;
 	left:0;
 	width:100%;
-	background-color:rgb(255,255,255);
+	background-color:rgba(255,255,255,.95);
 	z-index:100;
 }
 
@@ -133,14 +133,20 @@ nav{
 li{
 	font-family:Open Sans; Helvetica; Sans-serif;
 	text-transform: uppercase;
-	padding:2px 25px 2px 25px;
-	font-weight:600px;
-	font-size: 12px;
+	margin-top:60px;
 	letter-spacing: 1px;
 	display: inline-block;
 	position: relative;
+	
+}
+
+li a {
+	padding: 3px 30px 3px 30px;
+	font-weight:600px;
+	font-size: 12px;
 	margin-top: 60px;
 	margin-bottom: 25px;
+	
 }
 
 a{
@@ -152,7 +158,7 @@ li a:hover {
 	background-color: black;
 	color:white;
 	font-weight:600;
-	padding: 0 30px 0 30px;
+	padding: 1px 30px 1px 30px;
 	
 }
 
